# physics-581-the-standard-model

./: ..SphinxAutoBuildServer.term-0.term.init  .cookiecutter.yaml  .gitignore  .gitlab-ci.yml  .init-file.bash  .readthedocs.yaml  InstructorNotes.md  Makefile  README.md  environment.yaml  pyproject.toml
Docs/: Assignments.md  ClassLog.md  CoCalc.md  Demonstration.md  InstructorNotes.md  Notes.md  References.md  Syllabus.md  conf.py  index.md  macros.bib  references.bib
Docs/Assignments/: Assignment-0.md
Docs/ClassNotes/: AsymptoticSeries.md  DiracEquation.md  Electromagnetism.md  MockQFT.md  Phonons.md  RadialSEQ.md  RadialSEQII.md  RadialSEQScattering.md  RandomWalks.md  RenormalizationGroup.md  RenormalizingTheSEQ.md  ScalarFieldTheory.md
Docs/ClassNotes/RG_SEQ/: 00_Scattering.md  01_RadialSEQ.md  02_RadialSEQII.md  03_Diagonalization.md  03_Shooting.md  99_MyApproach.md
Docs/Prerequisites/: LinearAlgebra.md
Docs/_static/: math_defs.tex  mathjax
src/phys_581/: __init__.py  dvr.py  example.py  seq.py
tests/: conftest.py  test_example.py
